--- a/index.html
+++ b/index.html
@@ -45,35 +45,39 @@
 
             <section class="pratos">
                <article class="prato">
-                  <img src="" alt="Prato 01"> 
-                  <h4>Prato 01</h4>
+                  <img src="imagens/prato exemplo.jpg" alt="Prato 01"> 
+                  <h4>Ovo especial da casa</h4>
                   <h4>R$10,00</h4>
-                  <p>Lorem ipsum accusantium obcaecati aspernatur, eius unde odio ipsa!</p>
+                  <p>Ovo com verduras e legumes tops e bem temperados...</p>
                   <button type="button">Quero este prato</button>
                </article> 
                <article class="prato">
-                <img src="" alt="Prato 02"> 
-                <h4>Prato 02</h4>
+                <img src="imagens/prato exemplo2.jpg" alt="Prato 02"> 
+                <h4>Panquecas Americanas</h4>
                 <h4>R$15,00</h4>
-                <p>Lorem ipsum accusantium obcaecati aspernatur, eius unde odio ipsa!</p>
+                <p>Panquecas saborosas com uma leve cobertura de mel natural...</p>
                 <button type="button">Quero este prato</button>
              </article> 
              <article class="prato">
-                <img src="" alt="Prato 03"> 
-                <h4>Prato 03</h4>
+                <img src="Imagens/prato exemplo3.jpg" alt="Prato 03"> 
+                <h4>Salada ao molho branco com frango</h4>
                 <h4>R$20,00</h4>
-                <p>Lorem ipsum accusantium obcaecati aspernatur, eius unde odio ipsa!</p>
+                <p>Salada ao molho branco frango cozido ao ponto com um leve toque de nossos temperos...</p>
                 <button type="button">Quero este prato</button>
              </article> 
              <article class="prato">
-                <img src="" alt="Prato 04"> 
-                <h4>Prato 04</h4>
+                <img src="Imagens/prato exemplo4.jpg" alt="Prato 04"> 
+                <h4>Frango a la montese</h4>
                 <h4>R$30,00</h4>
-                <p>Lorem ipsum accusantium obcaecati aspernatur, eius unde odio ipsa!</p>
+                <p>Carne de porco com brócolis, legumes e uma pitada de temperos naturais...</p>
                 <button type="button">Quero este prato</button>
              </article> 
             </section>
         </div>
     </main>
+
+    <footer class="container">
+        <p>Desenvolvido com amor por Luana Barbosa</p>
+    </footer>
 </body>
 </html>
